# EstraPy

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  pyrightconfig.json  setup.cfg
docs/: 00_index.md  0_index.md  10_installation.md  20_quickstart.md  99_acknowledgement.md  README.md  _config.yml  index.md  installation.md
docs/03_syntax/: 00_index.md  10_syntax.md  20_filein.md  30_edge.md  40_0_background.md  40_0_normalization.md  40_1_preedge.md  40_2_postedge.md  40_3_normalize.md  50_0_data_cleaning.md  50_2_multiple-edge.md  55_averaging.md  70_save.md  80_0_data-manipulation.md  80_4_average.md
docs/2_commands/: 00_index.md  0_index.md  10_syntax.md  1_filein.md  20_filein.md  30_edge.md  40_background.md  45_deglitching.md  50_fourier.md  60_plotting.md  70_save.md  80_datamanipulation.md  index.md
docs/30_syntax/: 00_index.md  10_syntax.md  30_alignment.md  35_edge-energy.md  50_1_glitch-removal.md  60_background-removal.md  70_fourier.md  80_0_data-manipulation.md  80_1_cut.md  80_2_interpolate.md  80_3_rebin.md  80_5_noise.md  80_6_filter.md  90_save.md  99_plotting.md
docs/40_examples/: 00_examples.md  10_xanes-example.md
docs/_includes/: os_switcher.html
docs/_sass/custom/: custom.scss
docs/assets/css/: extra.css
example/: example.inp  hafnium.inp  manganese.inp  reference.inp
example/Fe/: As_200e_38_01.xdi  As_200e_38_02.xdi  As_200e_39_01.xdi  As_200e_39_02.xdi  Fe_200_05_01.xdi  Fe_200_05_01b.xdi  Fe_200_05_02.xdi
example/Hafnium/: analysis.inp
example/Hafnium/data/: Hf40_50K_Hf_L3_0000.xdi
example/Hf/: Hf40_50K_Hf_L3_0001.xdi  Hf40_50K_Hf_L3_0002.xdi
example/Manganese/: analysis.inp
example/Manganese/data/: AD09_a_01.xdi
example/Palladium/: analysis.inp  reference.inp
example/Palladium/data/: Pd_01_0001.xy  Pd_01_0003.xy  Pd_01_0004.xy  Pd_01_0005.xy
example/data/: Pd_01_0002.xy
src/EstraPy/commands/: _numberunit.py  background.py  edge.py  filein.py  glitch.py  othercmds.py  pca.py  plot.py  save.py
src/estrapy/: __init__.py  __main__.py  config.py  dispatcher.py  estrapy.py  parser.py  transformer.py
src/estrapy/commands/: __init__.py  _basic_command_conf.py  _context.py  _exceptions.py  _format.py  _handler.py  _misc.py  _numberunit.py  _parser.py  align.py  average.py  background.py  cut.py  deglitch.py  directives.py  edge.py  exceptions.py  filein.py  filein_pd.py  filter.py  fit.py  fourier.py  glitch.py  interpolate.py  multiedge.py  noise.py  normalize.py  othercmds.py  phase.py  plot.py  postedge.py  preedge.py  rebin.py  save.py  show.py
src/estrapy/core/: _validators.py  commandparser.py  context.py  datastore.py  edges.py  errors.py  extracttimestamp.py  fitmodel.py  grammarclasses.py  misc.py  number.py  threaded.py  (+1 more)
tests/test_core/: test_number.py
tests/test_grammar/: test_axisindexpos.py  test_mathexpressions.py
typings/: xraydb.pyi
(+38 files in other folders)
