[project]
name = "estrapy2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "lark>=1.3.0",
    "mashumaro>=3.17",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]


[tool.setuptools.package-data]
estrapy = ["grammar/*.lark"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]