[metadata]
name = EstraPy
version = attr: estrapy.__version__
author = "Marco Stecca, Carlo Meneghini, Paolo Centomo"
url = "https://github.com/ramsteak/estrapy2"
description = An input-file oriented EXAFS analysis toolbox
long_description = file: README.md, LICENSE
keywords = estrapy, syncrotron, xray, exafs, xas, xanes
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
install_requires =
    scipy
    matplotlib
    pandas
    statsmodels
    xraydb
    colorlog    
python_requires = >=3.12
package_dir=
    =src
packages=find:

[options.extras_require]  # in setup.cfg
test =
    pytest
    pytest-cov

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    estrapy = estrapy:estrapy.main

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
